<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="myself.hello.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/backgroud_color"
        android:title="@string/bgcolor_settings">
        <menu>
                <item
                    android:id="@+id/bggreen"
                    android:title="@string/bggreen"></item>
                <item
                    android:id="@+id/bgblue"
                    android:title="@string/bgblue"></item>
                <item
                    android:id="@+id/bgwhite"
                    android:title="@string/bgwhite"></item>
        </menu>
    </item>

    <item
        android:id="@+id/text_color"
        android:title="@string/txtcolor_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/txtyellow"
                    android:title="@string/txtyellow"></item>
                <item
                    android:id="@+id/txtblack"
                    android:title="@string/txtblack"></item>
                <item
                    android:id="@+id/txtred"
                    android:title="@string/txtred"></item>
            </group>
        </menu>
    </item>


</menu>
